fix: add-article response
